# voyenadekstop

./: .env.example  .gitignore  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.serena/: project.yml
electron/: main.ts  preload.ts
src/: main.tsx  router.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  models.rs
src/components/: AIPanel.tsx  BrainMapCanvas.tsx  BrainMapCanvas3D.tsx  EventCard.tsx  EventModal.tsx  NoteEditor.tsx  RootLayout.tsx  Settings.tsx  Sidebar.tsx
src/contexts/: AuthContext.tsx  ThemeContext.tsx
src/hooks/: useKeyboardShortcuts.ts
src/lib/: queryClient.ts
src/pages/: AuthPage.tsx  BrainMapPage.tsx  CalendarPage.tsx  DayTrackerPage.tsx  EventsPage.tsx  HomePage.tsx  NotePage.tsx
src/queries/: index.ts  useBrainMaps.ts  useEvents.ts  useFolders.ts  useNotes.ts
src/services/: aiService.ts  foldersService.ts  localStorageService.ts  notesService.ts  supabase.ts  tauriCommands.ts
src/styles/: app.css  brainmap.css  global.css
src/types/: index.ts
