[package]
name = "voyena"
version = "1.0.0"
description = "Voyena - Notes App"
authors = ["Voyena"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "voyena_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Async & utilities
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
